--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ archives_base_name=simpchemlib
 
 # Dependencies
 fabric_version=0.92.1+1.20.1
+clothconfig_version=11.1.118
+modmenu_version=7.2.2
