--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,20 +18,31 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
+        
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v2
+        
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
           distribution: 'microsoft'
+          
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
+        
       - name: build
         run: ./gradlew build
+
+      - name: Get Version
+        id: version
+        run: |
+          MESSAGE=$(ls build/libs/* | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F 'sipchemlib-|.jar' '{print $2}')
+          echo "version=$MESSAGE" >> $GITHUB_OUTPUT
+        
       - name: capture build artifacts
         if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
         uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
-          path: build/libs/
+          name: SimpleChemistryLib ${{ steps.version.outputs.version }}
+          path: build/libs/simpchemlib-${{ steps.version.outputs.version }}.jar
