--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,9 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
-
 name: build
 on: [pull_request, push]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        # Use these Java versions
-        java: [
-          21,    # Current Java LTS
-        ]
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
@@ -22,17 +11,21 @@ jobs:
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v2
         
-      - name: setup jdk ${{ matrix.java }}
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
-          java-version: ${{ matrix.java }}
-          distribution: 'microsoft'
+          distribution: zulu
+          java-version: 17
+
           
       - name: make gradle wrapper executable
+        if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
         
       - name: build
-        run: ./gradlew build
+        uses: gradle/gradle-build-action@v3
+        with:
+          arguments: build
 
       - name: Get Version
         id: version
@@ -41,7 +34,6 @@ jobs:
           echo "version=$MESSAGE" >> $GITHUB_OUTPUT
         
       - name: capture build artifacts
-        if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
         uses: actions/upload-artifact@v4
         with:
           name: SimpleChemistryLib ${{ steps.version.outputs.version }}
