--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,36 +5,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-        
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
-        
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: zulu
-          java-version: 17
-
-          
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
-        
-      - name: build
-        uses: gradle/gradle-build-action@v2.4.2
-        with:
-          arguments: build
-
-      - name: Get Version
-        id: version
-        run: |
-          MESSAGE=$(ls build/libs/* | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F 'sipchemlib-|.jar' '{print $2}')
-          echo "version=$MESSAGE" >> $GITHUB_OUTPUT
-        
-      - name: capture build artifacts
-        uses: actions/upload-artifact@v3.1.1
-        with:
-          name: SimpleChemistryLib ${{ steps.version.outputs.version }}
-          path: build/libs/simpchemlib-${{ steps.version.outputs.version }}.jar
+    - name: Compiling Minecraft Mod
+      uses: RuochenFu21/compilation@v1
