--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,11 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
+mod_name=SimpleChemistryLib
+mod_id=simpchemlib
 mod_version=1.0.0
 maven_group=zh.qiushui
-archives_base_name=simpchemlib
+
 
 # Dependencies
 fabric_version=0.92.1+1.20.1
