--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,39 @@
 name: build
-on: [pull_request, push]
+
+on: [ pull_request, push ]
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Compiling Minecraft Mod
-      uses: RuochenFu21/compilation@v1
+      - name: checkout
+        uses: actions/checkout@v3.1.0
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v3.6.0
+        with:
+          distribution: zulu
+          java-version: 17
+
+      - name: Make Gradle Wrapper executable
+        if: ${{ runner.os != 'Windows' }}
+        run: chmod +x ./gradlew
+
+      - name: Build
+        uses: gradle/gradle-build-action@v2.4.2
+        with:
+          arguments: build
+
+      - name: Get Version
+        id: version
+        run: |
+          MESSAGE=$(ls build/libs/* | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F 'SimpleChemistryLib-|.jar' '{print $2}')
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          name: SimpleChemistryLib
+          path: build/libs
