--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,11 @@ version = project.mod_version
 group = project.maven_group
 
 base {
-	archivesName = project.archives_base_name
+	archivesName = "${project.mod_name}-${project.minecraft_version}-" + version
+
+	String buildNumber
+	buildNumber = System.getenv("GITHUB_RUN_NUMBER")
+	version = "${project.mod_version}" + (buildNumber != null ? "+build.${buildNumber}" : "")
 }
 
 repositories {
@@ -67,7 +71,7 @@ jar {
 publishing {
 	publications {
 		create("mavenJava", MavenPublication) {
-			artifactId = project.archives_base_name
+			artifactId = project.mod_id
 			from components.java
 		}
 	}
