--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,10 @@ jobs:
         id: version
         run: |
           MESSAGE=$(ls build/libs/* | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F 'SimpleChemistryLib-|.jar' '{print $2}')
+          echo "version=$MESSAGE" >> $GITHUB_OUTPUT
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3.1.1
         with:
-          name: SimpleChemistryLib
-          path: build/libs
+          name: SimpleChemistryLib ${{ steps.version.outputs.version }}
+          path: build/libs/SimpleChemistryLib-${{ steps.version.outputs.version }}.jar
