--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ version = project.mod_version
 group = project.maven_group
 
 base {
-	archivesName = "${project.mod_name}-${project.minecraft_version}-" - "-" + version
+	archivesName = "${project.mod_name}-${project.minecraft_version}-" + version
 
 	String buildNumber
 	buildNumber = System.getenv("GITHUB_RUN_NUMBER")
