--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loader_version=0.15.11
 mod_name=SimpleChemistryLib
 mod_id=simpchemlib
 mod_version=0.0.1
-maven_group=zh.qiushui
+maven_group=zh.qiushui.mods
 
 
 # Dependencies
