--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id 'maven-publish'
 }
 
-version = project.mod_version
 group = project.maven_group
 
 base {
@@ -15,6 +14,7 @@ base {
 }
 
 repositories {
+	mavenCentral()
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
 }
@@ -41,10 +41,6 @@ dependencies {
 
 processResources {
 	inputs.property "version", project.version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -70,9 +66,11 @@ jar {
 // configure the maven publication
 publishing {
 	publications {
+
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
+
 	}
 }
