--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ maven_group=zh.qiushui.mods
 fabric_version=0.92.1+1.20.1
 clothconfig_version=11.1.118
 modmenu_version=7.2.2
+
+# Release
+is_release=false
