再修复版本号机制

--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ plugins {
 group = project.maven_group
 
 base {
-	archivesName = "${project.mod_name}-1.20.1-${version}"
+	archivesName = "${project.mod_name}-1.20.1-" + version
 
 	String buildNumber
 	buildNumber = System.getenv("GITHUB_RUN_NUMBER")
-	version = buildNumber != null ? "+build.${buildNumber}" : ""
+	version = project.mod_version + (buildNumber != null ? "+build.${buildNumber}" : "")
 }
 
 repositories {
@@ -40,7 +40,6 @@ dependencies {
 }
 
 processResources {
-	inputs.property "version", project.mod_version
 }
 
 tasks.withType(JavaCompile).configureEach {
