--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
-mod_name=SimpleChemistryLib
+mod_name=Simple-Chemistry-Lib
 mod_id=simpchemlib
 mod_version=0.0.1
-maven_group=zh.qiushui.mods
+maven_group=com.github.QiuShui1012
 
 
 # Dependencies
