--- a/build.gradle
+++ b/build.gradle
@@ -65,11 +65,16 @@ jar {
 // configure the maven publication
 publishing {
 	publications {
-
+		create("JitPack", MavenPublication) {
+			groupId = "${project.maven_group}"
+			artifactId = "${project.mod_name}"
+			version = "${minecraft_version}-${mod_version}"
+			from components.java
+		}
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-
+		maven { url "https://jitpack.io" }
 	}
 }
